# SpotifyClone

./: .gitignore  CMakeLists.txt  README.md  apimanager.cpp  apimanager.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
SpotifyBackend/: main.py
helper/: data.json  generate_json.py  seed_db.py  temp.py
sql/: schema.sql
